# domcp

./: AGENTS.md  Cargo.toml  README.md  domcp.json
Formula/: domcp.rb
src/: main.rs
src/domain/: diff.rs  mod.rs  model.rs  registry.rs
src/mcp/: mod.rs  prompts.rs  protocol.rs  resources.rs  tools.rs  write_tools.rs
src/server/: stdio.rs
src/store/: sqlite.rs
